log/build_2022-11-12_21-02-20/ros2_robotx/stderr.log
  File "/home/adept/ros2_ws_2/install/ros2_robotx/lib/python3.8/site-packages/ros2_robotx/drone_control.py", line 374
    elif dx > 0.05 or dy > 0.05:
    ^
SyntaxError: invalid syntax

